# privatecontrol

./: .gitignore  Makefile  automated_generation.py  default.nix  flake.nix  grid_search.py  launch.json  main.py  main_only_reconstruction.py  main_ts.py  main_ts_adv.py  main_ts_hypersweep.py  main_ts_noadv.py  main_vae.py  meep.txt  new_format_defacto.py  non_sanitized_adv.py  online_training.py  paretto_plots.py  pca_benchmarks.py  pykalman_comp.py  pykalman_ml.py  pykalman_native.py  pyproject.toml  requirements.txt  results_plots.py  simpler.py  ts_paretto.py
conrecon/: automated_generation.py  kalman.py  models.py  performance_test_functions.py  plotting.py  ss_generation.py  stats.py  training_utils.py  utils.py  validation_functions.py  validation_utils.py
conrecon/data/: data_loading.py  dataset_generation.py
conrecon/dplearning/: adversaries.py  vae.py
conrecon/kalman/: core.py  mo_core.py  utils.py
conrecon/models/: models.py  transformers.py
conrecon/utils/: common.py  datatyping.py  graphing.py
data/: defacto.csv.gpg  runs.tar.gpg
examples/: README.md  ex_cruise.py  iocontrol.py
scripts/: main.py  main_ouputpred_offline.py  main_vae.py  online_training.py  plot_filter.py  pykalman_comp.py  pykalman_ml.py  pykalman_native.py
wandb/: latest-run
wandb/run-20250116_111532-n3v3ihow/: run-n3v3ihow.wandb
wandb/run-20250116_112142-2nwnl51e/: run-2nwnl51e.wandb
wandb/run-20250116_114146-3defjaav/: run-3defjaav.wandb
wandb/run-20250116_115653-wfm88lie/: run-wfm88lie.wandb
wandb/run-20250116_115917-ypatj481/: run-ypatj481.wandb
(+17 files in other folders)
