[tool.poetry]
name = "lam"
version = "0.1.0"
description = ""
authors = ["Luis Garcia <luisgarcia26284@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
chineseize-matplotlib = "^1.2"
scipy = "^1.13.1"
control = "^0.10.0"
torch = "^2.3.0"
pandas = "^2.2.2"
tqdm = "^4.66.4"
opencv-python = "^4.10.0.82"
screeninfo = "^0.8.1"
fastparquet = "^2024.5.0"
rich = "^13.7.1"
sktime = "^0.31.0"
seaborn = "^0.13.2"


[tool.poetry.group.extras.dependencies]
debugpy = "^1.8.1"
catppuccin-matplotlib = "^0.4"
setuptools = "^70.0.0"
ipython = "7.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
