[tool.poetry]
name = "lam"
version = "0.1.0"
description = ""
authors = ["Luis Garcia <luisgarcia26284@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scipy = "^1.13.1"
control = "^0.10.0"
torch = "^2.3.0"
pandas = "^2.2.2"
tqdm = "^4.66.4"
opencv-python = "^4.10.0.82"
screeninfo = "^0.8.1"
fastparquet = "^2024.5.0"
rich = "^13.7.1"
seaborn = "^0.13.2"


# [tool.poetry.group.extras.dependencies]
# debugpy = "^1.8.1"
# catppuccin-matplotlib = "^0.4"
# setuptools = "^70.0.0"
# ipython = "7.16.1"
numpy = "^2.1.2"
scikit-learn = "^1.5.2"
pyqt5 = "^5.15.11"
pyqt6 = "^6.7.1"
debugpy = "^1.8.11"
sktime = "^0.35.0"
wandb = "^0.19.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
